ng-link issue (?)

--- a/index.html
+++ b/index.html
@@ -3,14 +3,7 @@
 <head>
     <title>Start Page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <script src="js/angular-1.4.0_beta6.js"></script>
-    <script src="js/router.es5.js"></script>
-    <!--components -->
-    <script src="components/navigation/navigation.js"></script>
-    <script src="components/home/home.js"></script>
-    <script src="components/footer/footer.js"></script>
-    <!--application-->
-    <script src="app.js"></script>
+
 </head>
 <body ng-controller="MainController">
 
@@ -18,5 +11,14 @@
 <div ng-viewport="main"></div>
 <footer ng-viewport="footer"></footer>
 
+<script src="js/angular-1.4.0_beta6.js"></script>
+<script src="js/router.es5.js"></script>
+<!--components -->
+<script src="components/navigation/navigation.js"></script>
+<script src="components/home/home.js"></script>
+<script src="components/footer/footer.js"></script>
+<script src="components/about/about.js"></script>
+<!--application-->
+<script src="app.js"></script>
 </body>
 </html>
