new Angular 1.4RC1, refactoring

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div ng-viewport="main"></div>
 <footer ng-viewport="footer"></footer>
 
-<script src="js/angular-1.4.0_beta6.js"></script>
+<script src="js/angular14.js"></script>
 <script src="js/router.es5.js"></script>
 <!--components -->
 <script src="components/navigation/navigation.js"></script>
